--- a/languages/cgmp-cs_CZ.po
+++ b/languages/cgmp-cs_CZ.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Comprehensive Google Map Plugin package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Comprehensive Google Map Plugin 7.0.4\n"
+"Project-Id-Version: Slick Google Map Plugin 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-21 13:27+0900\n"
 "PO-Revision-Date: 2015-01-21 13:37+0900\n"
@@ -111,8 +111,8 @@ msgid "From here"
 msgstr "Odtud"
 
 #: widget.php:29
-msgid "Simple Google Map"
-msgstr "Simple Google Map"
+msgid "Slick Google Map"
+msgstr "Slick Google Map"
 
 #: widget.php:30
 msgid ""
