--- a/languages/slick-google-map-plugin.pot
+++ b/languages/slick-google-map-plugin.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: simple-google-map-plugin\n"
+"Project-Id-Version: slick-google-map-plugin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-21 13:27+0900\n"
+"POT-Creation-Date: 2015-02-13 09:36+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -112,7 +112,7 @@ msgid "From here"
 msgstr ""
 
 #: widget.php:29
-msgid "Simple Google Map"
+msgid "Slick Google Map"
 msgstr ""
 
 #: widget.php:30
